Refactor[Auth]: Swagger 적용, 주석 추가, 불필요 코드 제거